add utilities and exp file, update notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 探索\n",
     "加载数据"
    ]
   },
@@ -201,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "模型"
+    "## 实验"
    ]
   },
   {
@@ -210,60 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "class Generator(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, mid_size, output_size):\n",
-    "        super(Generator, self).__init__()\n",
-    "        self.map1 = nn.Linear(input_size, hidden_size)\n",
-    "        self.map2 = nn.Linear(hidden_size, hidden_size)\n",
-    "        self.map3 = nn.Linear(hidden_size, mid_size)\n",
-    "        self.map4 = nn.Linear(mid_size, hidden_size)\n",
-    "        self.map5 = nn.Linear(hidden_size, hidden_size)\n",
-    "        self.map6 = nn.Linear(hidden_size, output_size)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        x = F.elu(self.map1(x))\n",
-    "        x = F.elu(self.map2(x))\n",
-    "        x = F.elu(self.map3(x))\n",
-    "        x = F.elu(self.map4(x))\n",
-    "        x = F.elu(self.map5(x))\n",
-    "        result = self.map3(x)\n",
-    "        return result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "训练"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# if torch.cuda.is_available():\n",
-    "g = Generator(data.shape[1],hidden_size,mid_size,data.shape[1])\n",
-    "\n",
-    "# for i in range():\n",
-    "# data_out = g(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.array([[1, 2], [3, 4]])\n",
-    "b = np.array([[5, 6]])\n",
-    "print(np.concatenate((a, b), axis=0))\n",
-    "\n",
-    "print(np.concatenate((a, b.T), axis=1))"
+    "%run exp.py"
    ]
   }
  ],
