--- a/main.ipynb
+++ b/main.ipynb
@@ -15,6 +15,22 @@
    "outputs": [],
    "source": [
     "import para\n",
+    "from utilities import DataLoader\n",
+    "dl = DataLoader()\n",
+    "machine_num = 1\n",
+    "raw_data,miss = dl(para.train_data,machine_num) #加载数据\n",
+    "print(raw_data.shape)\n",
+    "print(miss[0].shape)\n",
+    "print(miss[1].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import para\n",
     "import csv\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
