更新全部数据集训练

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,11 +17,42 @@
     "import para\n",
     "from utilities import DataLoader\n",
     "dl = DataLoader()\n",
-    "machine_num = 1\n",
-    "raw_data,miss = dl(para.train_data,machine_num) #加载数据\n",
-    "print(raw_data.shape)\n",
-    "print(miss[0].shape)\n",
-    "print(miss[1].shape)"
+    "l = []\n",
+    "for machine_num in range(33):\n",
+    "    raw_data = dl(para.train_data,machine_num) #加载数据\n",
+    "    l.append(len(raw_data))\n",
+    "    print(str(machine_num+1)+'Done.')\n",
+    "    \n",
+    "# print(raw_data.shape)\n",
+    "# print(miss[0].shape)\n",
+    "# print(miss[1].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = 346449\n",
+    "machine_num = 0\n",
+    "for i in range(len(l)):\n",
+    "    if index>=l[i]:\n",
+    "        index-=l[i]\n",
+    "    else:\n",
+    "        machine_num = i\n",
+    "        break\n",
+    "print(machine_num,index)\n",
+    "print(machine_num != None)        "
    ]
   },
   {
