seq2seq exp->exp2.py

--- a/main.ipynb
+++ b/main.ipynb
@@ -15,60 +15,13 @@
    "outputs": [],
    "source": [
     "import para\n",
-    "from utilities import DataLoader\n",
-    "dl = DataLoader()\n",
-    "l = []\n",
-    "for machine_num in range(33):\n",
-    "    raw_data = dl(para.train_data,machine_num) #加载数据\n",
-    "    l.append(len(raw_data))\n",
-    "    print(str(machine_num+1)+'Done.')\n",
-    "    \n",
-    "# print(raw_data.shape)\n",
-    "# print(miss[0].shape)\n",
-    "# print(miss[1].shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index = 346449\n",
-    "machine_num = 0\n",
-    "for i in range(len(l)):\n",
-    "    if index>=l[i]:\n",
-    "        index-=l[i]\n",
-    "    else:\n",
-    "        machine_num = i\n",
-    "        break\n",
-    "print(machine_num,index)\n",
-    "print(machine_num != None)        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import para\n",
     "import csv\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# print(t)\n",
     "for i in range(para.machine_num):\n",
-    "    file_path = para.train_data +  '{0:03d}'.format(i+1) + '/201807.csv'\n",
+    "    file_path = para.train_data +  '{0:03d}'.format(i+2) + '/201807.csv'\n",
     "    with open(file_path,'r') as file:\n",
     "        data = csv.reader(file)\n",
     "        data.__next__()\n",
@@ -159,6 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "p_miss_count = [0 for _ in range(70)]\n",
     "p_miss_total = len(p_miss_data)\n",
     "# print(p_miss_total)\n",
@@ -184,7 +138,7 @@
     "    else:\n",
     "        f_miss_t.append(record[0])    \n",
     "plt.figure(figsize=(16,8))\n",
-    "plt.plot(raw_data[0],[1 for _ in range(len(raw_data[0]))],'b.',label='full')\n",
+    "# plt.plot(raw_data[0],[1 for _ in range(len(raw_data[0]))],'b.',label='full')\n",
     "plt.plot(np.array(p_miss_t,dtype='M'),[0.9 for _ in range(len(p_miss_t))],'r.',label='p_miss')\n",
     "plt.plot(np.array(f_miss_t,dtype='M'),[0.8 for _ in range(len(f_miss_t))],'g.',label='f_miss')\n",
     "plt.legend(loc='best')\n",
@@ -259,6 +213,239 @@
    "outputs": [],
    "source": [
     "%run exp.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utilities import *\n",
+    "import pickle\n",
+    "import torch\n",
+    "dl = DataLoader()\n",
+    "machine_num = 0 # 0号为001，1号为002，以此类推\n",
+    "import para\n",
+    "raw_data = dl(para.train_data,machine_num) #加载数据\n",
+    "\n",
+    "data = raw_data[:,1:] #移除时间列\n",
+    "with open(\"meta.pkl\",'rb') as file:\n",
+    "    pp = pickle.loads(file.read())\n",
+    "    print('加载预处理meta完成。',flush=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = pp.transform(torch.tensor(data[0:10].astype('f4'))) #预处理输出\n",
+    "print(inputs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "rnn = nn.LSTM(input_size=141, hidden_size=256, bidirectional=True) #input_size, hidden_size, num_layers\n",
+    "# input: seq_len, batch, input_size\n",
+    "inputs = inputs.reshape(10,1,141).float()\n",
+    "h0 = torch.randn(2, 1, 256)#num_layers * num_directions, batch, hidden_size\n",
+    "c0 = torch.randn(2, 1, 256)#num_layers * num_directions, batch, hidden_size\n",
+    "output, (hn, cn) = rnn(inputs, (h0, c0)) # output: seq_len, batch, num_directions * hidden_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnn = nn.LSTMCell(141, 256)\n",
+    "hx = torch.randn(1, 256)\n",
+    "cx = torch.randn(1, 256)\n",
+    "output = []\n",
+    "for i in range(10):\n",
+    "    hx, cx = rnn(inputs[i], (hx, cx))\n",
+    "    output.append(hx)\n",
+    "    print(hx.shape)\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import para\n",
+    "i = 1\n",
+    "file_path = para.train_data +  '{0:03d}'.format(i) + '/201807.csv'\n",
+    "with open(file_path,'r') as file:\n",
+    "    with open('small.csv','w') as output:\n",
+    "        i = 0\n",
+    "        while i<201:\n",
+    "            output.write(file.readline()+'\\n')\n",
+    "            i+=1\n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "data = np.loadtxt('small.csv',dtype=np.str,delimiter=',',skiprows=1)\n",
+    "print(data[0])\n",
+    "data = torch.tensor(data[:,1:].astype('f4'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utilities import *\n",
+    "import pickle\n",
+    "import torch\n",
+    "print(data.shape)\n",
+    "with open(\"meta.pkl\",'rb') as file:\n",
+    "    pp = pickle.loads(file.read())\n",
+    "print('加载预处理meta完成。',flush=True)\n",
+    "inputs = pp.transform(data)\n",
+    "print(inputs[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = inputs.view(-1,2,inputs.shape[-1]).float() # L x B x I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "rnn = nn.LSTMCell(input_size=141, hidden_size=256, bidirectional=True) #input_size, hidden_size, num_layers\n",
+    "# input: seq_len, batch, input_size\n",
+    "# inputs = inputs.reshape(10,1,141).float()\n",
+    "h0 = torch.randn(2, 2, 256)#num_layers * num_directions, batch, hidden_size\n",
+    "c0 = torch.randn(2, 2, 256)#num_layers * num_directions, batch, hidden_size\n",
+    "o = []\n",
+    "for i in range(l):\n",
+    "    if mask[i]:\n",
+    "        o.append(rnn(inputs[i,:,:]))\n",
+    "    else:\n",
+    "        o.append(rnn(o[-1]))\n",
+    "\n",
+    "    \n",
+    "output, (hn, cn) = rnn(inputs, (h0, c0)) # output: seq_len, batch, num_directions * hidden_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(output.shape)\n",
+    "net = nn.Sequential(\n",
+    "    nn.Linear(512, 141),\n",
+    ")\n",
+    "pred = net(output)\n",
+    "loss_func = torch.nn.MSELoss()\n",
+    "loss = loss_func(pred,inputs)\n",
+    "optimizer = torch.optim.Adam(, lr=0.001)\n",
+    "net.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Net(torch.nn.Module):\n",
+    "    def __init__(self, n_feature, n_hidden, n_output):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.rnn_fw = torch.nn.LSTMCell(input_size=n_feature, hidden_size=n_hidden)\n",
+    "        self.rnn_bw = torch.nn.LSTMCell(input_size=n_feature, hidden_size=n_hidden)\n",
+    "        \n",
+    "        self.predict = torch.nn.Linear(n_hidden*2, n_output)\n",
+    "        \n",
+    "    def merge(self,missing,pred,mask):\n",
+    "        return missing + pred * mask\n",
+    "        \n",
+    "    def forward(self, x, is_train = True, mask = None):\n",
+    "        #x : L x B x F\n",
+    "        x_bw = x[::-1]\n",
+    "        out = []\n",
+    "        hx_fw = torch.randn(x.shape[1], x.shape[2]) # B x H\n",
+    "        cx_fw = torch.randn(x.shape[1], x.shape[2])\n",
+    "        hx_bw = torch.randn(x.shape[1], x.shape[2])\n",
+    "        cx_bw = torch.randn(x.shape[1], x.shape[2])\n",
+    "        if is_train:\n",
+    "            for i in range(x.shape[0]):\n",
+    "                hx_fw,cs_fw = self.rnn_fw(x[i],hx_fw,cs_fw)\n",
+    "                hx_bw,cs_bw = self.rnn_bw(x_bw[i],hx_bw,cs_bw)\n",
+    "                out.append(self.predict(torch.cat([hx_fw,hx_bw])))\n",
+    "        else:\n",
+    "            for i in range(x.shape[0]):\n",
+    "                if not mask[i]: # 正常值\n",
+    "                    hx_fw,cs_fw = self.rnn_fw(x[i],hx_fw,cs_fw)\n",
+    "                else: #缺失值\n",
+    "                    merge = self.merge(x[i],out[-1])\n",
+    "                    hx_fw,cs_fw = self.rnn_fw(x[i],hx_fw,cs_fw)\n",
+    "                if not mask[::-1][i]:\n",
+    "                    hx_bw,cs_bw = self.rnn_bw(x[i],hx_bw,cs_bw)\n",
+    "                else: #缺失值\n",
+    "                    merge = self.merge(x_bw[i],out[-1])\n",
+    "                    hx_fw,cs_fw = self.rnn_fw(x[i],hx_fw,cs_fw)\n",
+    "                hx_bw,cs_bw = self.rnn_bw(x_bw[i],hx_bw,cs_bw)\n",
+    "                out.append(self.predict(torch.cat([hx_fw,hx_bw])))\n",
+    "        out = torch.tensor(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Seq2Seq test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run exp2.py"
    ]
   }
  ],
