训练集忽略不连续序列，部分代码优化

--- a/main.ipynb
+++ b/main.ipynb
@@ -447,6 +447,44 @@
    "source": [
     "%run exp2.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run RNN/exp2.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run test.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run test.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(out[-1,-1] is float('NAN'))\n",
+    "print(out is float('nan'))\n",
+    "print(pd.DataFrame(out).isna().any().any())"
+   ]
   }
  ],
  "metadata": {
