--- a/main.ipynb
+++ b/main.ipynb
@@ -445,45 +445,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run exp2.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%run RNN/exp2.py"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "%run test.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run test.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(out[-1,-1] is float('NAN'))\n",
-    "print(out is float('nan'))\n",
-    "print(pd.DataFrame(out).isna().any().any())"
+    "%run RNN/evalute.py"
    ]
   }
  ],
