连续值预处理修改
1. 连续值预处理修改为StandardScaler
2. 尝试修正device的问题
3. 大量删除meta文件不正确加入git

--- a/main.ipynb
+++ b/main.ipynb
@@ -467,6 +467,18 @@
    "source": [
     "%run check_submit.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "%run utilities.py"
+   ]
   }
  ],
  "metadata": {
