--- a/main.ipynb
+++ b/main.ipynb
@@ -442,7 +442,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "%run RNN/exp2.py"
