--- a/main.ipynb
+++ b/main.ipynb
@@ -454,7 +454,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
